--- a/views/orders.ejs
+++ b/views/orders.ejs
@@ -192,7 +192,7 @@
                 </v-container>
 
             </main>
-            <v-bottom-nav fixed :value="true" :active.sync="e1" class="white">
+            <v-bottom-nav fixed :value="true" class="white">
                 <v-dialog width="500px" v-model="contactDialog">
                     <v-btn slot="activator" flat color="teal" value="favorites">
                         <span>Effectuer un réclamation</span>
@@ -218,7 +218,7 @@
                                 ></v-select>
                                 <v-text-field
                                         name="input-7-4"
-                                        label="Message"
+                                        label="Message *"
                                         v-model="contact.message"
                                         value="Décrivez votre demande en détail..."
                                         multi-line
@@ -296,11 +296,12 @@
                 dataLoaded: false,
                 currentOrder: {},
                 contact: {
-                    email: '',
+                    from: '',
                     orderReference: '',
                     category: '',
                     message: ''
                 },
+                errorDemandsArray: [],
                 dialog: false,
                 ordersTable: [],
                 orderReferenceArray: [],
@@ -321,7 +322,7 @@
                         Object.keys(currentUser.data.orders).forEach((key) => {
                             this.ordersTable.push(currentUser.data.orders[key]);
                         });
-                        this.contact.email = this.currentUser.email
+                        this.contact.from = this.currentUser.email
                         this.getTotalPriceOfOrders();
                         this.getOrderListByReference();
                         this.dataLoaded = true;
@@ -340,6 +341,10 @@
                  **/
                 sendDemands() {
                     this.contact.date = new Date()
+                    this.checkDemandsForm()
+                    if (this.errorDemandsArray.length > 0) {
+                        return swal('', 'Les champs suivants sont manquants : ' + this.errorDemandsArray.toString(), 'error')
+                    }
                     this.$http.post(this.baseUrlDemands, this.contact).then(res => {
                         this.contactDialog = false
                         swal('', 'Votre demande à été transmise et sera traitée sous peu', 'success')
@@ -376,6 +381,23 @@
                     this.currentOrder = order;
                     this.dialog = true;
                 },
+
+                /**
+                 * Check du formulaire de contact
+                 */
+                checkDemandsForm() {
+                    console.log(this.contact)
+                    this.errorDemandsArray = []
+                    if (this.contact.orderReference === '') {
+                        this.errorDemandsArray.push('Référence commande')
+                    }
+                    if (this.contact.category === '') {
+                        this.errorDemandsArray.push('Catégorie de la réclamation')
+                    }
+                    if (this.contact.message === '') {
+                        this.errorDemandsArray.push('Message')
+                    }
+                }
             }
         });
 
