--- a/views/cart.ejs
+++ b/views/cart.ejs
@@ -461,6 +461,7 @@
                         city: this.currentUser.city,
                         country: this.currentUser.country,
                         email: this.currentUser.email,
+                        userkey: this.currentUser.userkey,
                         firstname: this.currentUser.firstname,
                         name: this.currentUser.name,
                         postalCode: this.currentUser.postalCode
