hotfix(): url recette email

--- a/views/cart.ejs
+++ b/views/cart.ejs
@@ -482,7 +482,7 @@
                                 clientEmail: order.customerInformation.email,
                                 type: 'order'
                             }
-                            this.$http.post('http://localhost:3000/mail', email).then(success => {
+                            this.$http.post('http://imprimshirtcli.herokuapp.com/mail', email).then(success => {
                                 swal({
                                     title: 'Validation du paiement de votre commande',
                                     text: "Votre commande est désormais en cours de préparation.\n" +
